--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,12 +30,16 @@ jobs:
           python -m robot -d results -v URL:https://the-internet.herokuapp.com .
         # De punt aan het einde betekent: draai alle .robot bestanden in deze map
 
+      - name: Run Robot Framework Tests
+        run: python -m robot .
+        continue-on-error: true
+
       - name: Upload Robot Framework Results
         uses: actions/upload-artifact@v4
         if: always()
         with:
-        name: robot-results
-        path:
-         log.html
-         report.html
-         browser/screenshot/
+          name: robot-results
+          path: |
+            log.html
+            report.html
+            browser/screenshot/
