--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Install System Dependencies for Browser
+        run: npx playwright install-deps
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
