--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,13 +24,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install robotframework robotframework-browser robotframework-pabot robotframework-requests
+        # Installeer XVFB (het virtuele scherm)
+        sudo apt-get update
+        sudo apt-get install -y xvfb
 
     - name: Initialize Browser Library
       run: rfbrowser init
 
-    - name: Run All Tests Parallel (Headless)
-      # We geven de variabele HEADLESS:True mee zodat de cloud-browser niet crasht
-      run: pabot --processes 3 --variable HEADLESS:True -d results tests
+    - name: Run All Tests Parallel
+      # We gebruiken xvfb-run om de tests in een virtuele scherm-sessie te draaien
+      run: xvfb-run pabot --processes 3 --variable HEADLESS:True --variable SLOWMO:0.0s -d results tests
 
     - name: Deploy Report to GitHub Pages
       # 'if: always()' zorgt dat het rapport ALTIJD wordt geüpload, ook als tests falen
