--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,12 @@ jobs:
       run: rfbrowser init
 
     - name: Run All Tests Parallel
-      # We gebruiken xvfb-run om de tests in een virtuele scherm-sessie te draaien
-      run: xvfb-run pabot --processes 3 --variable HEADLESS:True --variable SLOWMO:0.0s -d results tests
+      run: |
+        xvfb-run pabot --processes 3 \
+        --variable HEADLESS:True \
+        --variable SLOWMO:0.0s \
+        --listener "Browser.NoContext" \
+        -d results tests
 
     - name: Deploy Report to GitHub Pages
       # 'if: always()' zorgt dat het rapport ALTIJD wordt geüpload, ook als tests falen
@@ -42,3 +46,6 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./results
+
+        # Om alleen smoke tests te draaien:
+      run: xvfb-run pabot --include smoke -d results tests  
