--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install robotframework robotframework-browser robotframework-pabot robotframework-requests
+        pip install robotframework robotframework-browser robotframework-pabot robotframework-requests robotframework-datadriver[XLS]
         sudo apt-get update
         sudo apt-get install -y xvfb
 
